--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,9 +1,9 @@
 :root {
-    --btn-color: #E8DBEE;
-    --paragraph-color: #8e7f93;
-    --backround-color: #f7f7f7;
-    --defult-font: "Lato", sans-serif;
-    --japanese-font: "Cherry Bomb One", system-ui;
+  --btn-color: #e8dbee;
+  --paragraph-color: #8e7f93;
+  --backround-color: #f7f7f7;
+  --defult-font: "Lato", sans-serif;
+  --japanese-font: "Cherry Bomb One", system-ui;
 }
 
 body {
@@ -18,16 +18,6 @@ body {
   );
 }
 
-
-a {
-  color: #8e7f93;
-}
-.name {
-  color: plum;
-  font-weight: bolder;
-  font-size: 50px;
-}
-
 .ganbare {
   font-family: var(--japanese-font);
   font-style: normal;
@@ -36,9 +26,6 @@ a {
 }
 
 h1 {
-  font-family: var(--defult-font);
-  font-size: 40px;
-  font-weight: 400;
 }
 
 .main-title {
@@ -46,10 +33,6 @@ h1 {
   text-decoration-style: wavy;
   text-decoration-color: plum;
   text-decoration-thickness: 3px;
-}
-
-p {
-  font-weight: normal;
 }
 
 .hero {
@@ -63,8 +46,10 @@ p {
 }
 
 .hero h1 {
-  font-size: 30px;
+  font-family: var(--defult-font);
+  font-weight: 500;
   margin: 0;
+  font-size: 30px;
   color: #8e7f93;
 }
 
@@ -76,6 +61,8 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+  text-decoration: none;
+  transition: all 0.3s ease-out;
 }
 
 .btn-branding:hover {
@@ -94,7 +81,7 @@ p {
   color: #8e7f93;
 }
 
-.content-container p {
+/* .content-container p {
   font-size: large;
   color: #8e7f93;
-}
+} */
