--- a/src/components/quiz/Quiz.css
+++ b/src/components/quiz/Quiz.css
@@ -1,5 +1,5 @@
 .quiz {
-  max-width: 600px;
+  max-width: 800px;
   margin: auto;
   margin-top: 50px;
   margin-bottom: 30px;
@@ -36,21 +36,31 @@
   font-family: "Kosugi Maru", sans-serif;
 }
 
-.quiz button {
+.score {
+  text-align: center;
+}
+
+.score h4 {
+  color: grey;
+  font-size: 22px;
+
+}
+
+.rest {
   margin: auto;
-  width: 140px;
-  height: 40px;
+  width: 120px;
+  height: 30px;
   background-color: var(--btn-color);
   border-radius: 8px;
   color: white;
   border: none;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 20px;
   text-decoration: none;
   transition: all 0.3s ease-out;
 }
 
-.quiz button:hover {
+.rest:hover {
   background-color: plum;
   color: white;
 }
