--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,6 +1,21 @@
 .about {
-    color: white;
-    background-color: rgb(224, 69, 69);
-    font-size: x-large;
-    text-align: center;
+  border: 80px;
+  color: gray;
+  border-radius: 20px;
+  max-width: 700px;
+  margin: 90px auto;
+  padding: 40px;
+  text-align: center;
+  background-color: white;
+        font-family: var(--defult-font);
+
+
+}
+
+.about-b {
+  font-weight: 500;
+  margin: 0;
+  font-size: 30px;
+  color: #8e7f93;
+  margin-bottom: 30px;
 }
