--- a/src/components/user/UserProfile.css
+++ b/src/components/user/UserProfile.css
@@ -7,10 +7,11 @@
 
 }
 
-.hello {
+.user-profile .hello {
   color: gray;
   margin-top: 50px;
   font-size: large;
+  text-align: center;
   margin-bottom: 50px;
 }
 
