--- a/src/components/wordinfo/WordInfo.css
+++ b/src/components/wordinfo/WordInfo.css
@@ -33,3 +33,18 @@
   line-height: 30px;
   padding: 10px 15px;
 }
+
+@media (max-width: 900px) {
+  .word-info .row {
+    width: 90%; 
+    padding: 15px 20px; 
+  }
+
+  .jp-word {
+    font-size: 30px; 
+  }
+
+  .means, .reading, .lvl {
+    font-size: 16px;
+  }
+}
